# peft-fine-tuning-pipeline

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
Sample data/: pharma_instruction_dataset.xlsx  pharma_preference_dataset.csv
data/: dataset_builder.py  pdf_processor.py
instruction_adapter/: adapter_config.json
instruction_output/checkpoint-5/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
models/: inference.py  lora_setup.py  model_loader.py  training_callback.py
output/checkpoint-3/: rng_state.pth  scheduler.pt  trainer_state.json
preference_adapter/: README.md
preference_output/: README.md
preference_output/checkpoint-5/: rng_state.pth  scheduler.pt  trainer_state.json
preference_output/checkpoint-5/ref/: adapter_config.json
preference_output/checkpoint-5/stage2/: adapter_config.json
processed_data/: pdf_pages_raw.jsonl  pharma_paragraphs.jsonl
stages/: instruction.py  non_instruction.py  preference.py
ui/: components.py
