[project]
name = "streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "pymupdf>=1.23.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "trl>=0.7.0",
]
